Fixed height wrap issue for image

--- a/css/style_slider.css
+++ b/css/style_slider.css
@@ -1,10 +1,10 @@
 .intro{padding:0;background:no-repeat;}
 .intro .intro-slider,
-.intro .intro-slider .item{width:100%;height:500px;}
+.intro .intro-slider .item{width:100%;/*height:500px;*/}
 .intro .intro-slider .item.one{/*background:url(../images/furlencoImages/hero_furlenco_image1.jpg);*/background-size:100% 100%;}
-.item.one > img { width:100%;position: absolute;}
+.item.one > img { width:100%;/*position: absolute;*/}
 .intro .intro-slider .item .background-image img{width:100%;}
-.intro .intro-slider .container{color:#696969;padding:50px 0px 200px 100px;text-align:center;}
+.intro .intro-slider .container{color:#696969;padding:50px 0px 200px 100px;text-align:center;position:absolute;top:5px;width:100%;}
 .intro .intro-slider .container .paddingtop{margin-top:10%;}
 .intro .intro-slider .container h1{font-size:28px;line-height:1.5em;margin-bottom:5px;}
 .intro .intro-slider .container h3{font-size:24px;line-height:1.5em;margin-bottom:30px;}
